After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 613935 - Fix download buffering for non-fast start FLVs
Fix download buffering for non-fast start FLVs
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: GStreamer backend
unspecified
Other All
: Normal normal
: ---
Assigned To: Maintainer alias for GStreamer component of Totem
Maintainer alias for GStreamer component of Totem
Depends on:
Blocks:
 
 
Reported: 2010-03-25 17:43 UTC by Bastien Nocera
Modified: 2010-03-29 18:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix download buffering for non-fast start FLVs (4.10 KB, patch)
2010-03-25 17:43 UTC, Bastien Nocera
none Details | Review
Fix download buffering for non-fast start FLVs (4.59 KB, patch)
2010-03-25 17:53 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2010-03-25 17:43:43 UTC
See patch
Comment 1 Bastien Nocera 2010-03-25 17:43:45 UTC
Created attachment 157088 [details] [review]
Fix download buffering for non-fast start FLVs

When filling during pre-roll, we need to make sure that
we query the queue2 element, and not playbin, otherwise it will fail.

When reaching 100% during pre-roll, make sure that bvw_buffering_done()
knows that we're ready to go.
Comment 2 Bastien Nocera 2010-03-25 17:53:11 UTC
Created attachment 157089 [details] [review]
Fix download buffering for non-fast start FLVs

When filling during pre-roll, we need to make sure that
we query the queue2 element, and not playbin, otherwise it will fail.

When reaching 100% during pre-roll, make sure that bvw_buffering_done()
knows that we're ready to go.
Comment 3 Bastien Nocera 2010-03-29 18:32:51 UTC
Attachment 157089 [details] pushed as bc3d214 - Fix download buffering for non-fast start FLVs