Fix download buffering for non-fast start FLVs

When filling during pre-roll, we need to make sure that
we query the queue2 element, and not playbin, otherwise it will fail.

When reaching 100% during pre-roll, make sure that bvw_buffering_done()
knows that we're ready to go.

https://bugzilla.gnome.org/show_bug.cgi?id=613935